--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -6,6 +6,9 @@
         android:label="kodiaryflutterdemo"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyBM9tidrNu2b5edzHhuher2ook63Y8Bfy0"/>
         <activity
             android:name=".MainActivity"
             android:exported="true"
